packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
//navbar // ================================================================
@include keyframes(alertown) {
    0% {transform: translateY(-50px);}
    100% {transform: translateY(0);}
}

.navbar {
    z-index: 250;
    border-left: 0;
    border-right: 0;
    border-top: 10px solid $navbar-top-border-color;
    border-top: 10px solid var(--navbar-top-border-color);
    position: fixed;
    top: 0;
    left: 0;
    margin: auto;
    width: 100%;
}

.alert-state-true {
    -webkit-transition: transform .5s;
    transition: transform .5s;
    transform: translateY(50px);
}

.nav-alert-state-true .alert {
    animation: alertDown .5s;
    height: 50px;
}
/* ... */

